<resources>
    <string name="app_name">Dino Pedia</string>
    <string name="info_family_name">Nama</string>
    <string name="info_family_desc">Deskripsi</string>
    <string name="info_family_periode">Periode Hidup</string>
    <string name="info_family_characteristic">Karakteristik</string>
    <string name="info_family_habitat">Habitat dan Lingkungan</string>
    <string name="info_family_perilaku">Perilaku</string>
    <string name="info_family_klasifikasi">Klasifikasi</string>
    <string name="info_dino_pict">Gambar Dinosaurus</string>
    <string name="info_dino_name">Nama</string>
    <string name="info_dino_description">Deskripsi</string>
    <string name="info_dino_characteristic">Karakteristik</string>
    <string name="info_dino_kelompok">Kelompok</string>
    <string name="info_dino_habitat">Habitat</string>
    <string name="info_dino_food">Makanan</string>
    <string name="info_dino_length">Panjang</string>
    <string name="info_dino_height">Tinggi</string>
    <string name="info_dino_weight">Bobot</string>
    <string name="info_dino_weak">Kelemahan</string>
    <string-array name="family_name">
        <item>Sauropoda</item>
        <item>Theropoda</item>
        <item>Ornithopoda</item>
        <item>Ceratopsia</item>
        <item>Stegosauria</item>
        <item>Ankylosauria</item>
        <item>Hadrosauridae</item>
        <item>Tyrannosauridae</item>
    </string-array>
    <string-array name="start_index_dino">
        <item>0</item>
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
    </string-array>
    <string-array name="end_index_dino">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>7</item>
        <item>9</item>
        <item>11</item>
        <item>13</item>
        <item>15</item>
    </string-array>
    <string-array name="family_pict">
        <item>@drawable/sauropoda</item>
        <item>@drawable/theropoda</item>
        <item>@drawable/ornithopoda</item>
        <item>@drawable/ceratopsia</item>
        <item>@drawable/stegosauria</item>
        <item>@drawable/ankylosauria</item>
        <item>@drawable/hadrosauridae</item>
        <item>@drawable/tyrannosauridae</item>
    </string-array>
    <string-array name="family_description">
        <item>Sauropoda adalah kelompok dinosaurus herbivora yang memiliki tubuh besar, leher panjang, dan ekor panjang.</item>
        <item>Theropoda adalah kelompok dinosaurus karnivora yang seringkali berukuran besar dan merupakan predator utama di zamannya.</item>
        <item>Ornithopoda adalah kelompok dinosaurus herbivora yang memiliki kemiripan dengan burung dalam cara bergerak dan makan.</item>
        <item>Ceratopsia adalah kelompok dinosaurus herbivora yang memiliki tanduk di kepala dan kerah tulang di leher.</item>
        <item>Stegosauria adalah kelompok dinosaurus herbivora dengan deretan punggung berduri dan plat tulang di punggungnya.</item>
        <item>Ankylosauria adalah kelompok dinosaurus herbivora yang memiliki tubuh rendah yang dilapisi oleh duri-duri keras dan kerah tulang.</item>
        <item>Hadrosauridae, juga dikenal sebagai "duck-billed dinosaurs", merupakan kelompok dinosaurus herbivora yang cenderung berjalan dengan dua atau empat kaki. Mereka memiliki gigi yang rata dan lebar, cocok untuk mengunyah tumbuhan.</item>
        <item>Tyrannosauridae merupakan kelompok dinosaurus theropoda yang merupakan pemangsa puncak dalam rantai makanan mereka. Mereka memiliki gigi yang besar dan kuat, dengan kepala yang besar.</item>
    </string-array>
    <string-array name="family_periode">
        <item>Sekitar 160 juta hingga 66 juta tahun yang lalu.</item>
        <item>Sekitar 230 juta hingga 66 juta tahun yang lalu.</item>
        <item>Sekitar 160 juta hingga 66 juta tahun yang lalu.</item>
        <item>Sekitar 161 juta hingga 66 juta tahun yang lalu.</item>
        <item>Sekitar 155 juta hingga 150 juta tahun yang lalu.</item>
        <item>Sekitar 157 juta hingga 66 juta tahun yang lalu.</item>
        <item>Sekitar 90 hingga 65 juta tahun yang lalu.</item>
        <item>Sekitar 68 hingga 66 juta tahun yang lalu.</item>
    </string-array>
    <string-array name="family_characteristic">
        <item>Tubuhnya besar dengan kaki yang kokoh, leher panjang yang digunakan untuk meraih dedaunan tinggi, dan ekor panjang untuk keseimbangan.</item>
        <item>Dilengkapi dengan gigi tajam, kaki yang kokoh, dan biasanya memiliki cakar besar di kaki depan.</item>
        <item>Biasanya memiliki gigi yang cocok untuk mengunyah tanaman, postur bipedal (berjalan dengan dua kaki), dan kadang-kadang memiliki kaki belakang yang lebih panjang.</item>
        <item>Terkenal dengan tanduk besar di hidung dan tulang tanduk di kepala, serta kerah tulang di leher yang mungkin digunakan untuk display atau pertarungan.</item>
        <item>Memiliki deretan besar bony plates di punggung yang mungkin berfungsi untuk mengatur suhu tubuh dan memperindah atau memperkuat diri dalam pertarungan.</item>
        <item>Dilapisi oleh armor berduri yang kuat, bola berduri di ekor yang mungkin digunakan untuk bertahan dari predator.</item>
        <item>Ciri khas Hadrosauridae adalah paruh yang mirip bebek, dengan banyak jenis memiliki crested yang unik. Beberapa spesies, seperti Parasaurolophus, memiliki crested yang panjang yang diyakini digunakan untuk komunikasi atau menghasilkan suara.</item>
        <item>Ciri khas Tyrannosauridae adalah tengkorak besar dan kuat dengan gigi yang besar dan rahang yang bisa membuka sangat lebar. Salah satu contoh terkenal adalah Tyrannosaurus rex dengan cakar yang kuat dan tubuh besar.</item>
    </string-array>
    <string-array name="family_habitat">
        <item>Mereka sering ditemukan di wilayah berhutan atau dataran tinggi, mengonsumsi tanaman tinggi seperti pohon-pohon conifer.</item>
        <item>Menjelajahi berbagai habitat, dari hutan hingga dataran terbuka, menjadi predator teratas dalam rantai makanan.</item>
        <item>Umumnya ditemukan di wilayah yang berair atau dataran rendah, sering berkelompok.</item>
        <item>Umumnya ditemukan di dataran yang luas, mungkin bersama-sama dengan kelompok lainnya.</item>
        <item>Biasanya ditemukan di hutan-hutan dan dataran rendah, mungkin berkelompok atau bersendirian.</item>
        <item>Biasanya ditemukan di dataran yang luas dan hutan-hutan, mungkin bergerombol.</item>
        <item>Mereka umumnya ditemukan di daerah dataran rendah, padang rumput, dan daerah berawa. Hadrosauridae sering hidup di kawasan yang lembab dan berair, karena itu mereka sering dihubungkan dengan lingkungan seperti hutan rawa.</item>
        <item>Mereka ditemukan di berbagai habitat, mulai dari hutan hingga dataran rendah. Tyrannosauridae dapat hidup di berbagai kondisi lingkungan, dari daerah yang lebih lembab hingga daerah yang lebih kering.</item>
    </string-array>
    <string-array name="family_perilaku">
        <item>Sauropoda diyakini berjalan dalam kelompok kecil untuk memperoleh perlindungan dari predator dan mempertahankan sumber makanan.</item>
        <item>Biasanya dikenal sebagai predator yang cerdas dan lincah, seperti Tyrannosaurus rex yang dianggap sebagai salah satu predator paling kuat.</item>
        <item>Mungkin berkelompok untuk perlindungan dan mencari makanan bersama.</item>
        <item>Tidak banyak yang diketahui, namun diperkirakan mereka berperilaku mirip dengan hewan herbivora modern yang menggunakan tanduk untuk pertahanan dan perebutan wilayah.</item>
        <item>Plate dan duri di ekor digunakan mungkin untuk pertahanan terhadap predator, dan tidak dikenal apakah mereka berkelompok atau soliter.</item>
        <item>Dikenal sebagai dinosaurus yang lamban namun memiliki pertahanan yang kuat dengan armor berduri dan bola ekor.</item>
        <item>Hadrosauridae adalah hewan berkelompok (gregarious), artinya mereka sering hidup dalam kawanan besar. Mereka juga diyakini memiliki perilaku bermigrasi, bergerak dalam jumlah besar antara tempat makanan musiman.</item>
        <item>Tyrannosauridae adalah predator soliter yang biasanya berburu sendirian. Beberapa penelitian menyebutkan kemungkinan bahwa mereka juga dapat berkelompok untuk menghadapi mangsa yang lebih besar atau dalam kondisi tertentu.</item>
    </string-array>
    <string-array name="family_klasifikasi">
        <item>Termasuk dalam ordo Saurischia, subordo Sauropodomorpha.</item>
        <item>Termasuk dalam ordo Saurischia, subordo Theropoda.</item>
        <item>Termasuk dalam ordo Ornithischia, subordo Ornithopoda.</item>
        <item>Termasuk dalam ordo Ornithischia, subordo Marginocephalia.</item>
        <item>Termasuk dalam ordo Ornithischia, subordo Stegosauria.</item>
        <item>Termasuk dalam ordo Ornithischia, subordo Thyreophora.</item>
        <item>Termasuk dalam ordo Ornithischia, subordo Ornithopoda.</item>
        <item>Termasuk dalam ordo Saurischia, subordo Theropoda</item>
    </string-array>
    <string-array name="dino_name">
        <item>Brachiosaurus</item>
        <item>Apatosaurus</item>
        <item>Tyrannosaurus</item>
        <item>Velociraptor</item>
        <item>Hadrosaurus</item>
        <item>Iguanodon</item>
        <item>Triceratops</item>
        <item>Styracosaurus</item>
        <item>Stegosaurus</item>
        <item>Kentrosaurus</item>
        <item>Ankylosaurus</item>
        <item>Euoplocephalus</item>
        <item>Parasaurolophus</item>
        <item>Edmontosaurus</item>
        <item>Daspletosaurus</item>
        <item>Albertosaurus</item>
    </string-array>
    <string-array name="dino_pict">
        <item>@drawable/brachiosaurus</item>
        <item>@drawable/apatosaurus</item>
        <item>@drawable/tyrannosaurus</item>
        <item>@drawable/velociraptor</item>
        <item>@drawable/hadrosaurus</item>
        <item>@drawable/iguanodon</item>
        <item>@drawable/triceratops</item>
        <item>@drawable/styracosaurus</item>
        <item>@drawable/stegosaurus</item>
        <item>@drawable/kentrosaurus</item>
        <item>@drawable/ankylosaurus</item>
        <item>@drawable/euoplocephalus</item>
        <item>@drawable/parasaurolophus</item>
        <item>@drawable/edmontosaurus</item>
        <item>@drawable/daspletosaurus</item>
        <item>@drawable/albertosaurus</item>
    </string-array>
</resources>